log
Wed Mar 18 01:34:46 AM UTC 2026: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
a357f9e
Wed Mar 18 01:49:36 AM UTC 2026: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:62:16: error: invalid use of undefined type ‘struct List’
   62 |       suma += L[i];
      |                ^
exercises.c:62:15: error: invalid use of incomplete typedef ‘List’
   62 |       suma += L[i];
      |               ^
bada6ad
Wed Mar 18 01:54:29 AM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
936a0e5
Thu Mar 19 07:08:31 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:77:15: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   77 |    int dato = first(L);
      |               ^~~~~
exercises.c:77:8: error: unused variable ‘dato’ [-Werror=unused-variable]
   77 |    int dato = first(L);
      |        ^~~~
cc1: all warnings being treated as errors
3c41c05
Thu Mar 19 07:09:22 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:77:10: error: unused variable ‘dato’ [-Werror=unused-variable]
   77 |    void* dato = first(L);
      |          ^~~~
cc1: all warnings being treated as errors
13926de
Thu Mar 19 07:13:25 PM UTC 2026: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘eliminaElementos’:
exercises.c:79:20: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
   79 |       if (elem == *(int*)elem) popCurrent(L);
      |                    ^
cc1: all warnings being treated as errors
8ca28d0
